//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Group {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  name String [unique, not null]
  isActive Boolean [not null, default: false]
  User User [not null]
}

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  lastLoginAt DateTime [not null]
  email String [unique, not null]
  username String [unique, not null]
  password String [not null]
  sessionVersion Int [not null, default: 1]
  isVerified Boolean [not null, default: false]
  isActive Boolean [not null, default: false]
  firstName String [not null, default: '']
  lastName String [not null, default: '']
  language String [not null, default: 'en']
  role Role [not null, default: 'USER']
  permissions Permission [not null]
  groupId String
  groups Group [not null]
}

Table ContactMessage {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [not null]
  subject String [not null]
  content String [not null]
  countryCode String [not null]
  ipAddress String [not null]
  language String [not null, default: 'en']
}

Table GroupToUser {
  userId String [ref: > User.id]
  groupsId String [ref: > Group.id]
}

Enum Role {
  USER
  STAFF
  ADMIN
  SUPERUSER
}

Enum Permission {
  appALL
  groupCREATE
  groupREAD
  groupUPDATE
  groupDELETE
  groupALL
  userCREATE
  userREAD
  userUPDATE
  userDELETE
  userALL
  contactMessageCREATE
  contactMessageREAD
  contactMessageUPDATE
  contactMessageDELETE
  contactMessageALL
}